# factor

./: .gitignore  CMakeLists.txt  LICENSE  README.md
app_include/: i18n.hpp  model.hpp  storage.hpp
data/: database.json
data/locales/: en-US.json  zh-TW.json
data/maintenance/: database.json
legacy_src/: data.c  data.h  gui.c  gui.h  main.c  raygui_impl.c  win_utils.c  win_utils.h
scripts/: package_release.ps1
src_cpp/: i18n.cpp  main.cpp  raygui_bridge.cpp  storage.cpp
